# sr-robot3-j5

./: .buildinfo  .flake8  .isort.cfg  .mailmap  LICENSE  Makefile  README.md  advanced.html  astoria.toml  extracode.flake8  genindex.html  index.html  mypy.ini  objects.inv  pyproject.toml  search.html  searchindex.js
.doctrees/: advanced.doctree  environment.pickle  index.doctree
.doctrees/ref/: index.doctree  robot.doctree
.github/workflows/: docs.yml  test.yml
_modules/: index.html
_modules/sr/robot3/: robot.html
_sources/: advanced.rst.txt
_sources/ref/: robot.rst.txt
_static/: documentation_options.js
docs/: advanced.rst  conf.py  index.rst  motor-board.rst  power-board.rst  ruggeduino.rst  running-code.rst  servo-board.rst
docs/ref/: index.rst  motors.rst  power.rst  ruggeduino.rst  servos.rst
examples/: vision.py
ref/: index.html  robot.html
scripts/: test.py
sr/robot3/: __init__.py  astoria.py  env.py  exceptions.py  game.py  kch.py  logging.py  mqtt.py  py.typed  robot.py  timeout.py  types.py
sr/robot3/calibrations/: FaceTime HD Camera.xml  Logitech C920.xml
sr/robot3/vision/: __init__.py  backend.py  strategy.py
sr/robot3/vision/calibrations/: FaceTime HD Camera.xml  Logitech B500.xml  Logitech C270.xml  Logitech C905.xml  Logitech C920.xml  Microdia Integrated_Webcam_HD.xml  __init__.py
stubs/RPi/: GPIO.pyi
stubs/cv2/: __init__.py
stubs/serial/tools/: list_ports_common.pyi
stubs/usb/: __init__.pyi  core.pyi
tests/: conftest.py  test_module.py  test_robot.py
