[tool.poetry]
name = "sr.robot3"
version = "2023.0.1"
description = "Student Robotics API for Python 3"
authors = ["Student Robotics <kit-brain@studentrobotics.org>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/srobo/sr-robot3"
homepage = "https://github.com/srobo/sr-robot3"
documentation = "https://studentrobotics.org/docs"
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
packages = [
    { include = "sr" },
]

[tool.poetry.dependencies]
python = "^3.8"
j5 = "^1.1.0"
j5-zoloto = "^0.4.0"
pyserial = "^3.4"
astoria = "^0.9.0"


[tool.poetry.dev-dependencies]
flake8 = "*"
flake8-bugbear = "*"
flake8-builtins = "*"
flake8-commas = "*"
flake8-comprehensions = "*"
flake8-debugger = "*"
flake8-docstrings = "*"
flake8-isort = "*"
flake8-mutable = "*"
flake8-print = "*"
flake8-todo = "*"
mypy = "*"
pytest = "*"
pytest-cov = "*"
rope = "*"
isort = {version = "*",extras = ["pyproject"]}
packaging = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
