[tool.poetry]
name = "sr.robot3"
version = "2023.2.0"
description = "Student Robotics API for Python 3"
authors = ["Student Robotics <kit-brain@studentrobotics.org>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/srobo/sr-robot3"
homepage = "https://github.com/srobo/sr-robot3"
documentation = "https://studentrobotics.org/docs"
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
packages = [
    { include = "sr" },
]

[tool.poetry.dependencies]
python = "^3.8"
j5 = "^1.1.2"
pyserial = "^3.4"
astoria = "^0.11.1"
"RPi.GPIO" = {version = "^0.7.0", optional = true}
paho-mqtt = "^1.6.1"
april-vision = {version = "^1.0.0", extras = ["j5"]}

[tool.poetry.extras]
kch = ["RPi.GPIO"]

[tool.poetry.dev-dependencies]
flake8 = "*"
flake8-bugbear = "*"
flake8-builtins = "^2.0.1"
flake8-commas = "*"
flake8-comprehensions = "*"
flake8-debugger = "*"
flake8-docstrings = "*"
flake8-isort = "*"
flake8-mutable = "*"
flake8-print = "*"
flake8-todo = "*"
mypy = "*"
pytest = "*"
pytest-cov = "*"
rope = "*"
isort = {version = "*",extras = ["pyproject"]}
packaging = "*"
types-paho-mqtt = "^1.6.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
